--- a/app/views/AccountDetailsNotVarifiedView.scala.html
+++ b/app/views/AccountDetailsNotVarifiedView.scala.html
@@ -14,14 +14,24 @@
  * limitations under the License.
  *@
 
+@import views.html.components.gds._
+
 @this(
         layout: templates.Layout,
-        govukButton: GovukButton
+        govukButton: GovukButton,
+        paragraphBody: paragraphBody,
+        paragraphBodyLink: paragraphBodyLink,
+        paragraphMessageWithLink: ParagraphMessageWithLink,
+        heading: heading,
 )
 
 @()(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("accountDetailsNotVarified.title"))) {
 
-    <h1 class="govuk-heading-xl">@messages("accountDetailsNotVarified.heading")</h1>
+     @heading(messages("accountDetailsNotVarified.heading"), "govuk-heading-l")
+
+     @paragraphBody(messages("accountDetailsNotVarified.p1"," 21 June 2025, 3:54pm"))
+     @paragraphMessageWithLink(Some(messages("accountDetailsNotVarified.p2")), linkMessage = messages("accountDetailsNotVarified.p2.link"), linkUrl = "https://www.gov.uk/guidance/", linkFullStop = true)
+
 }
