--- a/app/views/YourDirectDebitInstructionsView.scala.html
+++ b/app/views/YourDirectDebitInstructionsView.scala.html
@@ -14,14 +14,26 @@
  * limitations under the License.
  *@
 
+@import views.html.components.gds._
+
 @this(
         layout: templates.Layout,
-        govukButton: GovukButton
+        govukButton: GovukButton,
+        paragraphBody: paragraphBody,
+        paragraphBodyLink: paragraphBodyLink,
+        paragraphMessageWithLink: ParagraphMessageWithLink,
+        heading: heading
 )
 
 @()(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("yourDirectDebitInstructions.title"))) {
 
-    <h1 class="govuk-heading-l">@messages("yourDirectDebitInstructions.heading")</h1>
+     @heading(messages("yourDirectDebitInstructions.heading"), "govuk-heading-l")
+
+     @paragraphBody(messages("yourDirectDebitInstructions.p1"))
+     @paragraphMessageWithLink(Some(messages("yourDirectDebitInstructions.p2")),
+     linkMessage = messages("yourDirectDebitInstructions.p2.link"), linkUrl = "https://www.gov.uk/guidance/", linkFullStop = false,
+     message2 = Some(messages("yourDirectDebitInstructions.p2.afterLink")))
+
 }
