DTR 29: Skeleton pages: T16 to T21 (#7)
* Update base path, gov.uk rebrand

* Fixing failed builder

* DTR-29: Adding T16 page

* Adding T17, T18, T19 screens

* Adding T17, T18, T19 screens

* adding button to Check you answers for T20

* adding T21 screen skeleton

--- a/app/views/DirectDebitConfirmationView.scala.html
+++ b/app/views/DirectDebitConfirmationView.scala.html
@@ -15,21 +15,13 @@
  *@
 
 @this(
-    layout: templates.Layout,
-    govukSummaryList: GovukSummaryList,
-    govukButton: GovukButton
+        layout: templates.Layout,
+        govukButton: GovukButton
 )
 
-@(list: SummaryList)(implicit request: Request[_], messages: Messages)
+@()(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("checkYourAnswers.title"))) {
+@layout(pageTitle = titleNoForm(messages("directDebitConfirmation.title"))) {
 
-    <h1 class="govuk-heading-xl">@messages("checkYourAnswers.heading")</h1>
-
-    @govukSummaryList(list)
-
-    @govukButton(
-        ButtonViewModel(messages("checkYourAnswers.acceptAndContinue"))
-    )
-
+    <h1 class="govuk-heading-xl">@messages("directDebitConfirmation.heading")</h1>
 }
