DTR-43: addressed comments

--- a/app/views/SetupDirectDebitPaymentView.scala.html
+++ b/app/views/SetupDirectDebitPaymentView.scala.html
@@ -68,5 +68,5 @@
         content = Text(messages("setupDirectDebitPayment.startNow")),
         attributes = Map("id" -> "start-button")
     ))
-    <br/>
+    <p class = "govuk-!-padding-bottom-3"></p>
 }
