DTR-44: fixing mask count to 4 for a/c no.

--- a/app/views/YourDirectDebitInstructionsView.scala.html
+++ b/app/views/YourDirectDebitInstructionsView.scala.html
@@ -18,10 +18,10 @@
 @import utils.MaskAndFormatUtils._
 
 @this(
-layout: templates.Layout,
-paragraphMessageWithLink: ParagraphMessageWithLink,
-govukButton: GovukButton,
-govukErrorSummary: GovukErrorSummary,
+    layout: templates.Layout,
+    paragraphMessageWithLink: ParagraphMessageWithLink,
+    govukButton: GovukButton,
+    govukErrorSummary: GovukErrorSummary
 )
 
 @(directDebitDetails: List[DirectDebitDetails], maxLimit: Boolean = false)(implicit request: Request[_], messages: Messages)
@@ -38,7 +38,6 @@ govukErrorSummary: GovukErrorSummary,
       color: #6a6a6a;
       text-decoration: none;
     }
-
 </style>
 
 @layout(pageTitle = titleNoForm(messages("yourDirectDebitInstructions.title")), showBackLink = false) {
@@ -56,9 +55,9 @@ govukErrorSummary: GovukErrorSummary,
             )
     }
 
-<h1 class="govuk-heading-l">@messages("yourDirectDebitInstructions.heading")</h1>
+    <h1 class="govuk-heading-l">@messages("yourDirectDebitInstructions.heading")</h1>
 
-<p class="govuk-body">@messages("yourDirectDebitInstructions.p1")</p>
+    <p class="govuk-body">@messages("yourDirectDebitInstructions.p1")</p>
 
     @paragraphMessageWithLink(
         Some(messages("yourDirectDebitInstructions.p2")),
@@ -69,44 +68,44 @@ govukErrorSummary: GovukErrorSummary,
         maxLimit = maxLimit
     )
 
-@for(dd <- directDebitDetails) {
-<dl class="govuk-summary-list govuk-summary-list--equal-columns no-borders">
-    <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-            <h2>@dd.directDebitReference</h2>
-        </dt>
-        <dd class="govuk-summary-list__value">
-            <a class="govuk-link" href="" >
-                @messages("yourDirectDebitInstructions.dl.view.add")
-            </a>  <span class="govuk-visually-hidden"> for @dd.directDebitReference </span>
-        </dd>
+    @for(dd <- directDebitDetails) {
+        <dl class="govuk-summary-list govuk-summary-list--equal-columns no-borders">
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    <h2>@dd.directDebitReference</h2>
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    <a class="govuk-link" href="" >
+                        @messages("yourDirectDebitInstructions.dl.view.add")
+                    </a>  <span class="govuk-visually-hidden"> for @dd.directDebitReference </span>
+                </dd>
 
-    </div>
+            </div>
 
-    <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">@messages("yourDirectDebitInstructions.dl.direct.debit.reference")</dt>
-        <dd class="govuk-summary-list__value">@dd.directDebitReference</dd>
-    </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">@messages("yourDirectDebitInstructions.dl.direct.debit.reference")</dt>
+                <dd class="govuk-summary-list__value">@dd.directDebitReference</dd>
+            </div>
 
-    <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">@messages("yourDirectDebitInstructions.dl.date.setup")</dt>
-        <dd class="govuk-summary-list__value">@formatDateToGds(dd.setupDate)</dd>
-    </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">@messages("yourDirectDebitInstructions.dl.date.setup")</dt>
+                <dd class="govuk-summary-list__value">@formatDateToGds(dd.setupDate)</dd>
+            </div>
 
-    <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">@messages("yourDirectDebitInstructions.dl.sort.code")</dt>
-        <dd class="govuk-summary-list__value">@maskSortCode(dd.sortCode)</dd>
-    </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">@messages("yourDirectDebitInstructions.dl.sort.code")</dt>
+                <dd class="govuk-summary-list__value">@maskSortCode(dd.sortCode)</dd>
+            </div>
 
-    <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">@messages("yourDirectDebitInstructions.dl.account.number")</dt>
-        <dd class="govuk-summary-list__value">@maskAccountNumber(dd.accountNumber)</dd>
-    </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">@messages("yourDirectDebitInstructions.dl.account.number")</dt>
+                <dd class="govuk-summary-list__value">@maskAccountNumber(dd.accountNumber)</dd>
+            </div>
 
-    <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">@messages("yourDirectDebitInstructions.dl.payment.plans")</dt>
-        <dd class="govuk-summary-list__value">@dd.paymentPlans</dd>
-    </div>
-</dl>
-}
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">@messages("yourDirectDebitInstructions.dl.payment.plans")</dt>
+                <dd class="govuk-summary-list__value">@dd.paymentPlans</dd>
+            </div>
+        </dl>
+    }
 }
