--- a/app/views/components/DirectDebitDetailsTable.scala.html
+++ b/app/views/components/DirectDebitDetailsTable.scala.html
@@ -43,7 +43,7 @@
               $headerRightText
               ${headerRightVisuallyHiddenText.map { vht =>
                 s"<span class=\"govuk-visually-hidden\"> $vht </span>"
-              }.getOrElse("")}
+              }.getOrElse(emptyString)}
             </a>
           """
         ),
